--- a/package.json
+++ b/package.json
@@ -36,5 +36,12 @@
     "lint": "eslint .",
     "test": "vitest run --reporter=@learn-co-curriculum/jest-learn-reporter --reporter=default",
     "preview": "vite preview"
-  }
+  },
+  "jest": {
+  "transform": {
+    "^.+\\.jsx?$": "babel-jest"
+  },
+  "testEnvironment": "jsdom"
+}
+
 }
